@startuml

abstract class Random {
+vector<double>: generate(int)
}
class Normal

Random <|-- Normal

enum GeneratorType {
Custom
Standard
}

Random *- GeneratorType

class Option {
+double:payoff(Path)
+double:payoff(Path, Bump)
+double:getT()
+int:getDim()
}

class VanillaOption {
+double:getStrike()
}

Option <|-- VanillaOption
VanillaOption <|-- VanillaCall
VanillaOption <|-- VanillaPut

class AsianOption {
+double:getStrike()
}

Option <|-- AsianOption
AsianOption <|-- AsianCall
AsianOption <|-- AsianPut
AsianOption <|-- ArithmeticAsianCall
AsianOption <|-- ArithmeticAsianPut

abstract class Model<T extends Option> {
+T: getOption()
+double: discount(double);
+pair<double,double>: calcPrice()
+pair<double,double>: calcDelta()
+pair<double,double>: calcGamma()
+pair<double,double>: calcVega()
}

Model *- Option

class ModelResult

class Path

enum SensitivityMethod {
FiniteDifference
PathwiseDifferentiation
LikelihoodRatio
Analytical
}

abstract class SensitivityModel {
SensitivityMethod: getSensitivityMethod()
    double: calcDelta(Path &path)
    double: calcGamma(Path &path)
    double: calcVega(Path &path)
    double: deltaDivisor()
    double: gammaDivisor()
    double: vegaDivisor()
}

SensitivityModel *- SensitivityMethod

class Simulator {
+ vector<Path>: simulate(int sim)
+ bool:is_Antithetic()
}

class MCModel<T extends Option> {
+ModelResult:simulate(Simulator,SensitivityModel,int sim, int pathsize = 1)
+pair<double,double>: calcPrice();
+pair<double,double>: calcDelta(SensitivityModel)
+pair<double,double>: calcGamma(SensitivityModel)
+pair<double,double>: calcVega(SensitivityModel)
+void: define_control_variate(function,mean,beta)
}

MCModel o- SensitivityModel
MCModel o- ModelResult

class BSModel<T extends VanillaOption> {
+ModelResult:calculate()
}

BSModel o- ModelResult

class BSAsianModel<T extends AsianOption> {
+ModelResult:calculate()
}

BSAsianModel o- ModelResult

Model <|-- MCModel
Model <|-- BSModel
Model <|-- BSAsianModel

class BSCallModel<VanillaCall>
class BSPutModel<VanillaPut>
class BSAsianCallModel<AsianCall>
class BSAsianPutModel<AsianPut>

BSModel <|-- BSCallModel
BSModel <|-- BSPutModel
BSAsianModel <|-- BSAsianCallModel
BSAsianModel <|-- BSAsianPutModel

BSCallModel *- VanillaCall
BSPutModel *- VanillaPut
BSAsianCallModel *- AsianCall
BSAsianPutModel *- AsianPut


@enduml